<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:onClick="clearBtn"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rhombusleftcoloured"
                android:text="@string/clear"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/exponentBtn"
                android:onClick="exponentBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rhombusleft"
                android:text="@string/exponent"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/percentBtn"
                android:onClick="percentBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rhombusleft"
                android:text="@string/percent"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/divideBtn"
                android:onClick="divideBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rhombusleft"
                android:text="@string/divide"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBtn"
                android:onClick="sevenBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rhomubs"
                android:text="@string/seven"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/eightBtn"
                android:onClick="eightBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rhomubs"
                android:text="@string/eight"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/nineBtn"
                android:onClick="nineBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rhomubs"
                android:text="@string/nine"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/multiplyBtn"
                android:onClick="multiplyBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rhomubs"
                android:text="@string/multiply"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBtn"
                android:onClick="fourBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rhombusleft"
                android:text="@string/four"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/fiveBtn"
                android:onClick="fiveBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rhombusleft"
                android:text="@string/five"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/sixBtn"
                android:onClick="sixBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rhombusleft"
                android:text="@string/six"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/minutBtn"
                android:onClick="minusBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rhombusleft"
                android:text="@string/minus"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:onClick="oneBtn"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rhomubs"
                android:text="@string/one"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/twoBtn"
                android:onClick="twoBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rhomubs"
                android:text="@string/two"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/threeBtn"
                android:onClick="threeBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rhomubs"
                android:text="@string/three"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/plusBtn"
                android:onClick="plusBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rhomubs"
                android:text="@string/plus"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/emptyBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rhombusleft"
                android:contentDescription="@string/empty"
                android:text="@string/parentheses"
                android:textColor="@color/white"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/zeroBtn"
                android:onClick="zeroBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rhombusleft"
                android:text="@string/zero"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/pointBtn"
                android:onClick="pointBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rhombusleft"
                android:text="@string/point"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/equalsBtn"
                android:onClick="equalBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rhombusleftcoloured"
                android:text="@string/equals"
                android:textColor="@color/white" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/editText"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backSpaceBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/backspace"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/backspace"/>
</androidx.constraintlayout.widget.ConstraintLayout>